dataset1235/2025-2/2947369575/users/3985780136/executions/1003782500_2667036473.log
== SUBMISSION (2025-08-27 22:47:38)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:55:14)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:17)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:46:46)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
printround(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:56:03)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
print(round(TempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
30.5:293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
30.5:263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
30.5:233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
30.5:373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
30.5:273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
30.5:303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:46:48)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
printround(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 3
    printround(tempk,2))
                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:47:11)
-- CODE: 
Tempc = float(input("30.5:"))
TempK = Tempc + 273.15
print(round(tempk,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(tempk,2))
                ^^^^^
NameError: name 'tempk' is not defined. Did you mean: 'TempK'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
